--- a/src/styles/logout.css
+++ b/src/styles/logout.css
@@ -9,9 +9,10 @@
 }
 .logout button{
     background-color: red;
-    width: 100px;
+    width: 200px;
     height: 30px;
     border-radius: 10%;
     color: white;
     border: 1px solid white;
+    border-radius: 5%;
 }
