se crea la tabla de guides borro el componente de filtro y se entigra la funcionalidad  a la tabla

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -16,3 +16,6 @@
     border: 1px solid white;
 font-weight: bold;
 }
+select option:hover {
+    background-color: #F472B6; /* Color rosado */
+  }
