cambios realizados para crear buscador

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,14 @@
 
 :root{
     margin:0px;
-    margin-bottom: -10px;
+    margin-bottom: -5rem;
     padding:0px
 }
 
+body{
+    margin:0px;
+    margin-bottom: -5rem;
+    padding:0px
+}
 /* Estilo para las opciones del select */
 
